--- a/styles.css
+++ b/styles.css
@@ -1,114 +1,154 @@
-html, body{
-    margin:0px !important;
-    padding: 0px !important;
-    background-color: #ffffff;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    overflow-x: hidden;
- }
-
-header {
-    padding: 15px;
-    background-color: #FFD900;
-
+* {
+    margin: 0;
+    background: #1E1E1E;
+    box-sizing: border-box;
 }
 
-#sec1 {
-    display: grid;
-    grid-auto-flow: column;
-    grid-auto-columns: 50vw;
-    margin-top: 0px;
-    margin-left: -15px;
-    margin-bottom: 15px;
+body {
+    display: flex;
+    flex-direction: row;
+    color:#ffffff;
+    margin-right: 13%;
 }
 
-#desc {
-    text-align: center;
-    background-color: #514988;
-    color: white;
-    padding-top: 10px;
-    padding-right: 20px;
-    padding-left: 32px;
-    padding-bottom: 30px;
-    height: 450px;
-}
-
-#titulo {
-    margin: 5px;
-    color: #FFD900;
-    font-size: 40px;
-}
-
-#data {
-    margin-top: 20px;
-    font-size: 20px;
-}
-
-#conteudo {
-    font-size: 20px;
+#logo-dnc {
     margin-top: 40px;
-    padding: 20px
+    margin-left: 55px;
 }
 
-#countdown {
-    display: grid;
-    grid-auto-flow: column;
+section {
+    margin: 0 auto;
+    margin-top: 80px;
+    margin-bottom: 80px;
+    
+}
+#header {
     text-align: center;
-    background-color: white;
-    margin-right: 5px;
 }
 
-.cd-item {
-    color: #514988;
-    font-size: 44px;
-    margin-top: 5px;
-    margin-bottom: 5px;;
+section h1 {
+    margin: 20px 0px 20px 0px;
+    text-align: center;
+    font-family: 'Helvetica';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 34px;
 }
 
-#subtitulo {
-    background-color: white;
-    color: #E33881;
+.form-control {
+    margin-bottom: 10px;
+    padding-bottom: 20px;
+    position: relative;
+}
+
+.form-control label {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 600;
     font-size: 20px;
-    margin-top: -20px;
-    margin-bottom: -10px;
-    text-align: center;
+    display: inline-block;
+    margin-bottom: 5px;
 }
 
-#video {
-    background-color: white;
-    height: 10px;
-    margin: 5px 10px 0px 10px;
+.form-control input {
+    display: block;
+    align-items: center;
+    padding: 11px 13px;
+    font-size: 20px;
+    color: #0D70F1;
+    gap: 8px;
+    width: 524px;
+    height: 52px;
+    left: 509px;
+    top: 312px;
+    background: rgba(255, 255, 255, 0.9);
+    border: 1px solid #181818;
+    border-radius: 10px;
+    outline: none;
 }
 
-#compre {
-    display: grid;
-    grid-auto-flow: column;
-    background-color: white;
-    margin-right: 5px;
-    margin-left: 5px;
-    padding-bottom: 30px;
+input:placeholder-shown {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 16px;
+    color: #616161;
 }
 
-#subtitulo-ing {
-    color: #FFD900;
-    padding: 20px;
-    margin-left: 25px;
-    font-size: 25px;
+/* .form-control.success input {
+    border: 1.5px solid #00D6ED;
+} */
+
+/* .form-control.error input {
+    border: 1.5px solid #E73550;;
+} */
+
+.form-control.error i .img-error {
+    visibility: visible;
+}
+
+/* .form-control.success i .img-success {
+    visibility: visible;
+} */
+
+.form-control.error small {
+    visibility: visible;
+}
+
+.form-control i {
+    position: absolute;
+    top: 45px;
+    right: 10px;
+    visibility: hidden;
+}
+
+.form-control small {
+    visibility: hidden;
+    position: absolute;
+    margin-top: 5px;
+    right: 10px;
+    color: #E73550;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
 }
 
 button {
-    background-color: #514988;
-    border-radius: 14px;
-    border-color: transparent;
-    color: white;
-    margin: 30px;
-    width: 360px;
-    height: 90px;
-    font-size: 28px;
-    font-weight: bold;
-    margin-top: 9rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 36px;
+    gap: 8px;
+    width: 100%;
+    height: 48px;
+    left: 509px;
+    top: 804px;
+    background: #04A9FF;
+    border-radius: 6px;
+    border: none;
+    margin-top: 30px;
+    font-weight: 800;
+    font-size: 22px;
+    line-height: 21px;
+    color: #FFFFFF;
 }
 
 button:hover {
+    background: #0D70F1;
     cursor: pointer;
-    color:#FFD900
+    transition: 0.3s;
+}
+
+.result  {
+    padding: 10px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 14px;
+    color: #E73550;
 }
